--- a/abst.tex
+++ b/abst.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                      %
-% Summer School on Finte geometry 2017 %
+% Summer School on Finite geometry 2017 %
 %                                      %
 % Template for submitting the abstract %
 % of a 15-minute contributed talk      %
